fix(featureListItem): adjust styling on mobile view

--- a/src/components/featureListItem/featureListItem.module.scss
+++ b/src/components/featureListItem/featureListItem.module.scss
@@ -13,6 +13,7 @@
 }
 
 .featureListItemLabel {
+    width: calc(100% - 20px);
     font-family: $fontFamily;
     font-size: $fontSizeDefault;
     font-weight: $fontWeightRegular;
